--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.0",
     "bcrypt": "^5.1.1",
+    "lucide-react": "^0.475.0",
     "mysql2": "^3.12.0",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
@@ -19,9 +21,9 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20.17.19",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "daisyui": "^4.12.23",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
